WFLY-17439 Eliminate static references to mail subsystem ResourceDefinition instances